# MonsterFactory

./: CMakeLists.txt  ColaMonstruos.h  LICENSE  assets.qrc  gamescreen.cpp  gamescreen.ui  main.cpp  mainwindow.cpp  mainwindow.ui  readme.md
MonsterFactoryCore/: LICENSE  main.cpp
MonsterFactoryCore/logs/: BitacoraAlmacen.txt  BitacoraBasurero.txt  BitacoraCola.txt  BitacoraEntrega.txt  BitacoraGeneral.txt  BitacoraHorno.txt  BitacoraInspector1.txt  BitacoraInspector2.txt  BitacoraPedidos.txt
MonsterFactoryCore/orders/: order1  order2  order3  order4
MonsterFactoryCore/src/: cliente.h  combiner.h  delivery.h  furnace.h  garbageCollector.h  inspector.h  logFunctions.cpp  quality.h  queues.h  sources.h  storage.h
MonsterFactoryCore/src/Functions/: cliente.cpp  combiner.cpp  delivery.cpp  furnace.cpp  garbageCollector.cpp  inspector.cpp  logFunctions.cpp  material.cpp  monster.cpp  quality.cpp  queues.cpp  sources.cpp  storage.cpp  tray.cpp  worker.cpp
MonsterFactoryCore/src/Headers/: cliente.h  combiner.h  core.h  delivery.h  furnace.h  gamescreen.h  garbageCollector.h  inspector.h  logFunctions.h  mainwindow.h  material.h  monster.h  quality.h  queues.h  sources.h  storage.h  tray.h
MonsterFactoryGui/: MonsterFactoryGUI.qmlproject  MonsterFactoryGUI.qmlproject.qtds
MonsterFactoryGui/MonsterFactoryGUI/: Constants.qml  DirectoryFontLoader.qml  qmldir
MonsterFactoryGui/MonsterFactoryGUI/designer/: plugin.metainfo
MonsterFactoryGui/MonsterFactoryGUIContent/: App.qml  Screen01.ui.qml
source/: Almacen.h  Basurero.h  Calidad.h  Cliente.h  ColaMonstruos.h  Entrega.h  Inspector.h  cliente.h  combiner.h  delivery.h  furnace.h  garbageCollector.h  inspector.h  material.h  monster.h  quality.h  queues.h  sources.h  storage.h  tray.h
